# multipixel

./: .clang-format  .gitignore  AUTHORS.md  Cargo.toml  LICENSE  README.md  clean  compile  configure_debug  configure_plain  configure_release  meson.build  package-lock.json  pch.hpp  run  settings.json
.cargo/: config.toml
plugins/example/: init.lua
plugins/plugin/: init.lua
server/: Cargo.toml
server/src/: config.rs  main.rs  packet.rs  packet_client.rs  packet_server.rs  room.rs  server.rs  session.rs
src/: canvas_cache.rs  chunk.cpp  chunk.hpp  chunk.rs  chunk_cache.rs  chunk_system.cpp  chunk_system.hpp  chunk_system.rs  color.hpp  command.cpp  command.hpp  command.rs  compression.rs  config.rs  database.cpp  database.hpp  database.rs  event_queue.rs  id.rs  limits.rs  main.cpp  main.rs  packet_client.rs  packet_server.rs  pixel.rs  plugin.cpp  plugin.hpp  preview_system.cpp  preview_system.hpp  preview_system.rs  room.cpp  room.hpp  room.rs  serial_generator.rs  server.cpp  server.hpp  server.rs  session.cpp  session.hpp  session.rs  (+8 more)
src/SQLiteCpp/: Backup.h  Database.cpp  Exception.cpp  Savepoint.cpp  Savepoint.h  Statement.cpp  Statement.h  Transaction.h
src/chunk/: cache.rs  chunk.rs  compositor.rs  layer.rs  mod.rs  system.rs  writer.rs
src/lib/: ojson.cpp  ojson.hpp  portable_endian.h
src/lib/SQLiteCpp/: Backup.cpp  Column.cpp  Column.h  Database.h  ExecuteMany.h  SQLiteCpp.h  Transaction.cpp  VariadicBind.h
src/lib/sol/: config.hpp  forward.hpp  sol.hpp
src/tool/: brush.rs  iter.rs  iter_brush.rs  iter_line.rs  mod.rs  state.rs  triangle.rs
src/util/: binary_reader.hpp  buffer.hpp  byteswap.hpp  event_queue.hpp  id.hpp  listener.hpp  logs.cpp  logs.hpp  mutex.hpp  optional.hpp  smartptr.hpp  timestep.cpp  timestep.hpp  types.cpp  types.hpp
subprojects/websocketpp/: meson.build
web/: chat.js  client.js  compile  gl-matrix.min.js  index.html  multipixel.css  multipixel.js  package-lock.json  package.json  render_engine.js  run.js  script.js  serve  style.css  timestep.js  tsconfig.app.json  tsconfig.json  viewport.js  vite.config.ts  watch  webpack.config.js
web/public/: logo.webm
web/public/style/: multipixel.css  style.css
web/src/: chat.module.scss  chat.module.scss.d.ts  chat.scss  chat.scss.d.ts  chat.ts  chat.tsx  chunk_map.ts  client.ts  color.ts  easings.ts  glass.scss  global_defines.ts  globals.scss  gui_custom.tsx  index.html  index.ts  index.tsx  login_screen.module.scss  login_screen.module.scss.d.ts  login_screen.scss  login_screen.scss.d.ts  login_screen.tsx  multipixel.ts  multipixel.tsx  preview_system.ts  render_engine.ts  room_instance.tsx  room_screen.module.scss  room_screen.module.scss.d.ts  room_screen.scss  room_screen.scss.d.ts  room_screen.tsx  style.module.scss  style.module.scss.d.ts  style.scss  style.scss.d.ts  styles.css  timestep.ts  tool.ts  tool_panel.tsx  (+6 more)
web/src/assets/: multipixel.css
web/src/chat/: ChatInput.tsx  ChatMessage.tsx  chat.module.scss  chat.module.scss.d.ts  chat.tsx
web/src/chat/components/: ChatInput.tsx  ChatMessage.tsx  chatMessage.module.css  chatMessage.module.css.d.ts
web/src/chat/utils/: getColorForName.ts
web/src/ui/components/: FloatContainer.tsx  Input.tsx
web/src/utils/: useLocalState.ts
web/src/views/canvas/: room_screen.module.scss  room_screen.module.scss.d.ts  room_screen.tsx
web/src/views/login/: login_screen.module.scss  login_screen.module.scss.d.ts  login_screen.tsx
