[package]
name = "multipixel"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
binary-reader = "0.4.5"
bytes = "1.6.0"
console-subscriber = "0.2.0"
futures-util = { version = "0.3.30", features = ["sink"] }
glam = { version = "0.27.0" }
log = "0.4.21"
lz4_flex = "0.11.3"
num = "0.4.3"
num_enum = "0.7.2"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha1_smol = "1.0.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-websockets = { version = "0.8.3", features = ["server", "sha1_smol"] }

# https://github.com/programatik29/tokio-rusqlite/pull/36
tokio-rusqlite = { git = "https://github.com/JakubKoralewski/tokio-rusqlite.git", branch = "master" }
tokio-util = "0.7.12"
libc = "0.2.159"
tokio-fd = "0.3.0"
