[package]
name = "multipixel"
version = "0.1.0"
edition = "2021"

[features]
default = []
dump = []

[profile.release-with-debug]
inherits = "release"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
binary-reader = "0.4.5"
bytes = "1.6.0"
console-subscriber = "0.4.1"
futures-util = { version = "0.3.31", features = ["sink"] }
glam = { version = "0.27.0" }
log = "0.4.21"
lz4_flex = "0.11.3"
num = "0.4.3"
num_enum = "0.7.2"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha1_smol = "1.0.0"
tokio = { version = "1.43.0", features = ["full"] }
tokio-websockets = { version = "0.11.2", features = ["server", "sha1_smol"] }
tokio-util = "0.7.13"
libc = "0.2.159"
tokio-fd = "0.3.0"
fastrand = "2.3.0"
rusqlite = "0.33.0"
smallvec = "1.14.0"
